# Shell

./: .gitignore  CMakeLists.txt  README.md  Shell
Tests/suites/1/input/: 4.in
Tests/suites/4/input/: 4.in
include/: builtins.h  config.h  errors.h  reader.h  shl_children.h  shl_execute.h  shl_io.h
lib/input_parse/: Makefile
lib/minix_input_parse/: Makefile  y.tab.c
src/: builtins.c  debug.c  debug.h  errors.c  main.c  reader.c  shl_children.c  shl_execute.c  shl_io.c
